Finished test 1 and 2. Finishing 3

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   </head>
   <body lang="en-US">
     <h1>
+      Intelligence Test
+    </h1>
+    <p>
       This site will contain 3 Intelligence tests. The questions will give you
       feedback and in the end, you will learn how many tries it took you to get
       it right. I hope you can pass them on your first try! Best of luck.
-    </h1>
+    </p>
     <nav>
       <div class="nav-tab">
         <a href="test1.html" class="navigation">Test 1</a>
