--- a/test2.html
+++ b/test2.html
@@ -4,9 +4,34 @@
     <meta charset="utf-8" />
       <!-- BOOTSTRAP (style only)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title>Number Intelligence Test</title>
+    <title>Number Intelligence Test - Test 1</title>
     <script type="text/javascript" src="test.js"></script>
   </head>
+
   <body lang="en-US">
+    <div class="row">
+      <div class="col-xs-6 col-md-4">1.) A , 4 -> E</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-4">2.) P , 2 -> R</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-4">3.) C , 15 -> R</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-4" id="T2Group">4.) M , 9 ->
+        <input type="text" id="t2Answer"
+              placeholder="Put answer here" />
+          <button type="button" onclick="validateT2Answer();">Check Answer</button>
+          <span id="T2AnswerError" class="control-label hidden-message"></span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-4">
+        <button type="button" onclick="toTest3();">Next Question</button>
+      </div>
+    </div>
+
   </body>
+
 </html>
