--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
       <!-- BOOTSTRAP (style only)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="intelligence_style.css">
     <title>Number Intelligence Test - Home</title>
     <script type="text/javascript" src="test.js"></script>
   </head>
@@ -25,9 +26,6 @@
       </div>
       <div class="nav-tab">
         <a href="test3.html" class="navigation">Test 3</a>
-      </div>
-      <div class="nav-tab">
-        <a href="results.html" class="navigation">Results</a>
       </div>
     </nav>
   </body>
