--- a/results.html
+++ b/results.html
@@ -4,9 +4,34 @@
     <meta charset="utf-8" />
       <!-- BOOTSTRAP (style only)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title>Number Intelligence Test - Results</title>
+    <link rel="stylesheet" type="text/css" href="intelligence_style.css">
+    <title>Number Intelligence Test</title>
     <script type="text/javascript" src="test.js"></script>
   </head>
-  <body lang="en-US">
+  <body lang="en-US" onload="calculateResults();">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-2" style="float: left;">
+          <h2>Corrects</h2>
+        </div>
+        <div class="col-sm-2" style="float: left;">
+          <h2 id="corrects">0</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2" style="float: left;">
+          <h2>Wrongs</h2>
+        </div>
+        <div class="col-sm-2" style="float: left;">
+          <h2 id="wrongs">0</h2>
+        </div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-4">
+        <button type="button" onclick="toHome();">Home</button>
+      </div>
+    </div>
   </body>
 </html>
