--- a/test2.html
+++ b/test2.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
       <!-- BOOTSTRAP (style only)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="intelligence_style.css">
     <title>Number Intelligence Test - Test 1</title>
     <script type="text/javascript" src="test.js"></script>
   </head>
 
   <body lang="en-US">
+    <h1>This is your second test</h2>
+    <p>Solve the following and hit the button to check your answer.</p>
     <div class="row">
       <div class="col-xs-6 col-md-4">1.) A , 4 -> E</div>
     </div>
