--- a/test3.html
+++ b/test3.html
@@ -4,9 +4,26 @@
     <meta charset="utf-8" />
       <!-- BOOTSTRAP (style only)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="intelligence_style.css">
     <title>Number Intelligence Test</title>
     <script type="text/javascript" src="test.js"></script>
   </head>
   <body lang="en-US">
+    <h1>This is your final test. Good luck.</h1>
+    <p>Solve the riddle and hit the check button to see if you got it correct</p>
+    <p id="riddle">You will always find me in the past. I can be created in the present, but the future can never taint me. What am I?</p>
+    <div class="row">
+      <div class="col-xs-6 col-md-4" id="T3Group">
+        <input type="text" id="t3Answer"
+              placeholder="What am I?" />
+          <button type="button" onclick="validateT3Answer();">Check Answer</button>
+          <span id="T3AnswerError" class="control-label hidden-message"></span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6 col-md-4">
+        <button type="button" onclick="toResults();">Results</button>
+      </div>
+    </div>
   </body>
 </html>
